--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ok": "node index.js"
+    "leap": "node index.js"
   },
   "author": "Ed",
   "license": "ISC"
